Add func likes and follows

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Welcome to Blog By Stanislavovich</h1>
+ <h1>Hello</h1>
+{% endblock %}
+
+{% block scripts %}
+
 {% endblock %}
