--- a/core/templates/header.html
+++ b/core/templates/header.html
@@ -1,50 +1,84 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="">AutoParts</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="">Автомобили</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Запчасти</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-          
-          {% if request.user.is_authenticated %}
-          <li class="nav-item dropdown me-2">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Аккаунт
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="">Профиль</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="{">Мои Автомобили</a></li>
-
-            </ul>
-          </li>
-            <li class="nav-item me-2">
-              <a class="nav-link" href="" tabindex="-1" aria-disabled="true">{{ request.user.username }}</a>
+{% block styles %}
+  <style>
+      .circle-image {
+        display: inline-block;
+        border-radius: 50%;
+        overflow: hidden;
+        width: 40px;
+        height: 40px;
+    }
+      .circle-image img {
+        width:100%;
+        height:100%;
+        object-fit: cover;
+    }
+  </style>
+{% endblock %}       
+      
+  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'public_list' %}">SmallBlog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'public_list' %}">Публикации</a>
             </li>
-              <form class="d-flex" action="{% url 'logout' %}" method="POST">
-                {% csrf_token %}
-                <button class="btn btn-outline-light" type="submit">Выход</button>
-              </form>
-          {% else %}
-            <div class="login-button">
-              <a class="btn btn-outline-light me-2" href="">Войти</a>
-            </div>
-            <div class="register-button">
-              <form class="d-flex me-2" action="">
-                <button class="btn btn-outline-light" type="submit">Регистрация</button>
-              </form>
-            </div>
-          {% endif %}
-        </ul>
+            <li class="nav-item">
+              <a class="nav-link" href=""></a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+            
+            {% if request.user.is_authenticated %}
+            <li class="nav-item dropdown me-2">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Аккаунт
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="{% url 'my_publics' %}">Мои публикации</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{% url 'create_public' %}">Добавить публикацию</a></li>
+
+              </ul>
+            </li>
+              <div>
+                  <span class="circle-image">
+                  <a href="{% url 'my_profile' %}">
+                    <img src="
+                            {% if user.profile.image %}
+                            {{ user.profile.image.url }}
+                            {% else %}
+                            https://flomaster.top/uploads/posts/2023-01/1673563884_flomaster-club-p-profil-risunok-vkontakte-4.jpg
+                            {% endif %}" 
+                            alt="CATEGORY IMAGE"
+                            style="object-fit: cover;"
+                            class="card-img-top h-10"
+                            >
+                  </a>
+              </div>
+              <li class="nav-item me-2">
+                  
+                  <a class="nav-link" href="{% url 'my_profile' %}" tabindex="-1" aria-disabled="true">{{ request.user.username }}</a>
+              </li>
+                <form class="d-flex" action="{% url 'logout' %}" method="POST">
+                  {% csrf_token %}
+                  <button class="btn btn-outline-light" type="submit">Выход</button>
+                </form>
+            {% else %}
+              <div class="login-button">
+                <a class="btn btn-outline-light me-2" href="{% url 'login' %}">Войти</a>
+              </div>
+              <div class="register-button">
+                <form class="d-flex me-2" action="{% url 'register' %}">
+                  <button class="btn btn-outline-light" type="submit">Регистрация</button>
+                </form>
+              </div>
+            {% endif %}
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
