--- a/publication/templates/public_list.html
+++ b/publication/templates/public_list.html
@@ -88,6 +88,28 @@
             </div>
         {% endfor %}
 
+    {% for contact in page_obj %}
+        {{ contact.full_name|upper }}<br>
+        ...
+    {% endfor %}
+    
+    <div class="pagination d-flex justify-content-center">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1"><button class="btn btn-outline-dark"><<<</button></a>
+                <a href="?page={{ page_obj.previous_page_number }}"><button class="btn btn-outline-dark"><</button></a>
+            {% endif %}
+    
+            <span class="current">
+                Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}.
+            </span>
+    
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}"><button class="btn btn-outline-dark">></button></a>
+                <a href="?page={{ page_obj.paginator.num_pages }}"><button class="btn btn-outline-dark">>>></button></a>
+            {% endif %}
+        </span>
+    </div>
 
 {% endblock %}
 
